// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a List control 1`] = `
<div
  className="ui-list list normal disabled nohover"
  id=""
  style={Object {}}
>
  <ul>
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      selected={false}
    >
      some list item
    </li>
  </ul>
</div>
`;

exports[`Test making List control invisible 1`] = `
<div
  className="ui-list list normal invisible"
  id=""
  style={Object {}}
>
  <ul>
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      selected={false}
    >
      some list item
    </li>
  </ul>
</div>
`;

exports[`Test retrieval of List props object 1`] = `
Object {
  "alternating": false,
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onAdd": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "unselect": false,
  "visible": true,
  "width": "",
}
`;

exports[`Test the creation of a List control container 1`] = `
<div
  className="ui-list list listAlternating normal test-class"
  id=""
  style={Object {}}
>
  <ul>
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      selected={false}
    >
      some list item
    </li>
  </ul>
</div>
`;
